# ui

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
.github/workflows/: ui-strict-ci.yml
benchmarks/: CMakeLists.txt  assets_benchmark.cpp  forms_benchmark.cpp  html_benchmark.cpp  live_benchmark.cpp  view_context_benchmark.cpp
cmake/: Config.cmake.in
examples/: 01_basic_view.cpp  02_html_response.cpp  03_assets.cpp  04_forms.cpp  05_shell_config_v04.cpp  06_fragment.cpp  07_live_update.cpp  08_flash_and_toast.cpp  09_rich_forms.cpp  10_form_binding.cpp  11_asset_pipeline.cpp  12_asset_manifest.cpp  13_pwa_helpers.cpp  14_web_app_manifest.cpp  CMakeLists.txt  desktop_shell_basic.cpp  desktop_shell_readiness.cpp  desktop_shell_with_server.cpp
examples/support/: Env.hpp
include/vix/ui/: Version.hpp  all.hpp
include/vix/ui/assets/: Asset.hpp  AssetManager.hpp  AssetManifest.hpp  AssetMap.hpp  AssetMode.hpp
include/vix/ui/core/: View.hpp  ViewContext.hpp  ViewData.hpp  ViewResult.hpp
include/vix/ui/forms/: CsrfToken.hpp  Field.hpp  FieldOption.hpp  Form.hpp  FormData.hpp  ValidationError.hpp
include/vix/ui/html/: Html.hpp  HtmlAttrs.hpp  HtmlEscape.hpp  HtmlResponse.hpp
include/vix/ui/live/: FlashMessage.hpp  Fragment.hpp  LiveUpdate.hpp  Toast.hpp
include/vix/ui/platform/: Platform.hpp
include/vix/ui/pwa/: PwaMeta.hpp  SafeArea.hpp  Viewport.hpp  WebAppManifest.hpp
include/vix/ui/shell/: AppShell.hpp  ServerProcess.hpp  ServerReadiness.hpp  ShellConfig.hpp
include/vix/ui/shell/backends/: DescriptorShellBackend.hpp  LinuxWebViewShellBackend.hpp  ShellBackend.hpp
include/vix/ui/support/: Error.hpp  Result.hpp
src/: Version.cpp
src/assets/: Asset.cpp  AssetManager.cpp  AssetManifest.cpp  AssetMap.cpp
src/core/: View.cpp  ViewContext.cpp  ViewResult.cpp
src/forms/: CsrfToken.cpp  Field.cpp  FieldOption.cpp  Form.cpp  FormData.cpp  ValidationError.cpp
src/html/: Html.cpp  HtmlAttrs.cpp  HtmlEscape.cpp  HtmlResponse.cpp
src/live/: FlashMessage.cpp  Fragment.cpp  LiveUpdate.cpp  Toast.cpp
src/platform/: Platform.cpp
src/pwa/: PwaMeta.cpp  SafeArea.cpp  Viewport.cpp  WebAppManifest.cpp
src/shell/: AppShell.cpp  ServerProcess.cpp  ServerReadiness.cpp  ShellConfig.cpp
src/shell/backends/: DescriptorShellBackend.cpp  LinuxWebViewShellBackend.cpp
src/support/: Error.cpp
tests/: CMakeLists.txt
tests/assets/: asset_test.cpp
tests/core/: view_context_test.cpp  view_test.cpp
tests/forms/: csrf_token_test.cpp  field_option_test.cpp  form_data_test.cpp  form_test.cpp
tests/html/: html_response_test.cpp  html_test.cpp
tests/live/: flash_message_test.cpp  fragment_test.cpp  live_update_test.cpp  toast_test.cpp
tests/pwa/: pwa_meta_test.cpp  safe_area_test.cpp  viewport_test.cpp  web_app_manifest_test.cpp
tests/shell/: app_shell_test.cpp  server_process_test.cpp  server_readiness_test.cpp
